python-defaults (2.6.5-13) UNRELEASED; urgency=low

  * Python policy changes for X-Python-Version and X-Python3-Version
    - Minimum changes for Squeeze

 -- Scott Kitterman <scott@kitterman.com>  Tue, 10 Aug 2010 22:22:49 -0400

python-defaults (2.6.5-12) unstable; urgency=low

  * pycompile: do not hang if interpreters are not started in the same order
    as they're used (LP: #613675)
  * Add manpage for dh_python2, pycompile and pyclean
  * Standards-Version bumped to 3.9.1 (no other changes required)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 05 Aug 2010 19:15:52 -0400

python-defaults (2.6.5-11) unstable; urgency=medium

  * Add README.PyDist to python-doc package
  * pycompile: compile public module for the right Python version (really
    closes: 590224)
  * dh_python2: rename --depend to --depends, --recommend to --recommends and
    --suggest to --suggests

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 27 Jul 2010 21:25:54 +0200

python-defaults (2.6.5-10) unstable; urgency=medium

  * dh_python2:
    - add --depend, --recommend and --suggest command line options
     (use it if requires.txt doesn't contain dependency that package needs)
    - add {/usr,}/sbin to the list of directories with checked shebangs
  * pycompile: do not exit before all background byte compilation is finished
    (closes: 590224)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 25 Jul 2010 12:34:56 +0200

python-defaults (2.6.5-9) unstable; urgency=low

  [ Piotr Ożarowski ]
  * pyclean, pycompile: use .communicate() instead of .wait() to avoid hanging
    `dpkg -L PACKAGE` in few situations
  * dh_python2: follow Distribute and replace all non-alphanumeric
    characters with underscore in distribution name

  [ Matthias Klose ]
  * Require python (>= 2.6.5-9~) in generated dependencies to use the fixed
    pycompile.

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 19 Jul 2010 20:27:50 +0200

python-defaults (2.6.5-8) unstable; urgency=low

  * Revert: