@@ -2,8 +2,9 @@ python-defaults (2.6.5-13) UNRELEASED; urgency=low
 
   * Python policy changes for X-Python-Version and X-Python3-Version
     - Minimum changes for Squeeze
+  * In pyversions, do not silently ignore Python 3 versions
 
- -- Scott Kitterman <scott@kitterman.com>  Tue, 10 Aug 2010 22:22:49 -0400
+ -- Scott Kitterman <scott@kitterman.com>  Tue, 10 Aug 2010 22:27:20 -0400
 
 python-defaults (2.6.5-12) unstable; urgency=low
 
